# py-ggmpc

./: .gitignore  .readthedocs.yml  .travis.yml  README.md  TESTING.md  setup.cfg
docs/source/: conf.py  ggmpc.rst  index.rst
src/: .gitignore
src/ggmpc/: __init__.py  __main__.py  curves.py  ecdsa.py  eddsa.py  rand.py  serialization.py  shamir.py
src/ggmpc/serialization/: ecdsa.py  eddsa.py
test/: test_command_line.py  test_ecdsa.py  test_eddsa.py  test_library_methods.py
