[metadata]
name = ggmpc
version = 0.0.1
author = John Driscoll
author_email = johnoliverdriscoll@gmail.com
description = An implementation of Gennaro-Goldfeder MPC
license = GPL-3.0-orlater
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnoliverdriscoll/py-ggmpc
project_urls =
  Bug Tracker = https://github.com/johnoliverdriscoll/py-ggmpc/issues

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  base58
  phe
  secp256k1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  ggmpc = ggmpc:__main__.main
